Add no authenticated endpoint /principal/me extracted from domain
